<resources>
    <string name="app_name">NB拉杆箱</string>
    <string name="connecting">连接中...</string>
    <string name="state_connected">已连接</string>
    <string name="state_disconnected">已断开</string>
    <string name="tryagain">再次尝试</string>
    <string name="connected">连接</string>
    <string name="disconnected">断开</string>
    <string name="scanning">扫描中...</string>
    <string name="disconnecting">正在断开...</string>
    <string name="dev_conn_number">设备连接数量：</string>

    <string name="blestatus">连接中</string>
    <string name="suit_lock">箱包开关</string>
    <string name="suit_alert">设备布防</string>
    <string name="suit_des">智能锁检测到异常开门时，触发报警器恐吓盗贼，主动保护您的财产安全。</string>
    <string name="suit_map">地图</string>

    <string name="updatelocation">更新经纬度</string>
    <string name="longitude">经度</string>
    <string name="longitude_txt">位置获取中</string>
    <string name="latitude">纬度</string>
    <string name="deviceid">设备ID</string>
    <string name="devicestate">设备状态</string>

    <string name="cast_unlost">正常</string>
    <string name="cast_lost">丢失</string>
</resources>
