<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/location_img"
            android:layout_height="@dimen/location_img"
            android:src="@mipmap/location" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/location_pad"
            android:paddingTop="@dimen/location_pad">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/longitude"
                    android:textColor="@color/c333" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/location_pad"
                    android:text="@string/longitude_txt"
                    android:textColor="@color/c666" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/latitude"
                    android:textColor="@color/c333" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/location_pad"
                    android:text="@string/longitude_txt"
                    android:textColor="@color/c666" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/location_pad"
            android:paddingTop="@dimen/location_pad">

            <TextView
                android:id="@+id/update_loc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/theme_c"
                android:paddingBottom="@dimen/location_btn_pad"
                android:paddingLeft="@dimen/location_pad"
                android:paddingRight="@dimen/location_pad"
                android:paddingTop="@dimen/location_btn_pad"
                android:text="@string/updatelocation"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/ble_status1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/blestatus" />

    <ListView
        android:id="@+id/ble_showser1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"></ListView>
</LinearLayout>